--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ label.logo {
   color: white;
   padding: 0 100px;
   line-height: 80px;
+  cursor: pointer;
 }
 nav ul {
   float: right;
@@ -50,13 +51,16 @@ a:hover {
   flex-basis: 50%;
   padding-left: 10%;
 }
+.banner-text {
+  padding-top: 80px;
+}
 .flex-item-1 p {
   font-size: 18px;
   line-height: 28px;
   margin-top: 30px;
 }
 .flex-item-1 img {
-  width: 60%;
+  width: 80%;
 }
 .flex-item-1 button {
   margin-top: 40px;
@@ -82,11 +86,15 @@ a:hover {
   line-height: 65px;
   white-space: nowrap;
 }
-
+.aboutMe {
+  background-image: url(images/shapes/shape-1.png);
+  background-repeat: no-repeat;
+}
 .flexbox-container-2 {
   display: flex;
   margin-top: 120px;
   margin-bottom: 95px;
+  padding-block: 100px;
 }
 .flex-item-2 {
   flex-basis: 50%;
@@ -121,6 +129,12 @@ a:hover {
   font-size: 30px;
   color: grey;
 }
+.recipies {
+  margin-top: 150px;
+}
+.recipies > * {
+  text-align: center;
+}
 .recipies h1 {
   font-size: 32px;
   color: #2a1c22;
@@ -139,7 +153,7 @@ a:hover {
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
-  box-shadow: 1px 1px 8px grey;
+  box-shadow: 1px 1px 8px #ccc;
   margin: 20px;
   border-radius: 30px;
 }
@@ -159,6 +173,7 @@ a:hover {
 
 .reviews {
   max-width: 1335px;
+  margin-bottom: 40px;
 }
 .flexbox-container-4 {
   display: flex;
@@ -195,4 +210,17 @@ a:hover {
   padding: 1em;
   color: grey;
   font-weight: 400;
+}
+footer {
+  background-color: black;
+  text-align: center;
+  min-height: 40vh;
+}
+footer h1 {
+  color: grey;
+  padding-block: 30px;
+}
+footer > p {
+  color: white;
+  line-height: 40px;
 }
